[Picture-in-Picture] Fix shadow dom crash when exiting PiP.

This CL fixes a tab crash that occurs when calling document.exitPictureInPicture()
if a video in a shadow DOM is already in Picture-in-Picture.

Bug: 904828

Change-Id: I6aed0fa43dd0af1406d4349509101d423f622d96
Reviewed-on: https://chromium-review.googlesource.com/c/1333769
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/master@{#607658}
Former-commit-id: 5dea3e1ef15cb10052e5d7d62993fe7d9a11e87b